--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@ body{
 
 .row{
     display:flex;
-    justify-content: space-around;;
+    justify-content: space-around;
     width: 90%;
     margin:auto;
     
@@ -51,5 +51,5 @@ button:hover{
 }
 
 .first{
-    width:33%;
+    width:50%;
 }
